src/test/deca/syntax/invalid/test_synt/control_structures/while_unclosed.deca
// Description:
//    Declaration dun while sans fermant
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur de parse instruction ligne 15  
//
// Historique:
//    cree le 14/01/2022

{
    while(true) 
    {
}